[package]
name = "webassembly-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.147"
yew = "0.19"
yew-router = "0.16"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
gloo = "0.8"
gloo-console = "0.2.3"
gloo-net = "0.2.4"
pulldown-cmark = "0.9.2"